# OctoBot

./: .gitignore  package-lock.json  package.json
assets/: JoinServer.html
assets/static/: __184fbanalytics.js  bootstrap.js
native-utils-octo/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
native-utils-octo/src/: lib.rs
prisma/: schema.prisma
src/: bot.ts  index.ts
src/Commands/General/: help.ts  profile.ts  stats.ts
src/Commands/Octo/: Invite.ts
src/Events/: AutoResponders.ts  InteractionHandler.ts  NewUser.ts  onReady.ts
src/Utils/: AutoReloader.ts  CommandClass.ts  CommandsRegistrar.ts  Logging.ts  Methods.ts  ModuleLoader.ts
src/Utils/Events/: DiscordEvent.ts  EventRegister.ts
src/WebServer/: index.ts  init.ts
src/WebServer/MiddleWare/: Auth.ts  Util.ts  Validation.ts
src/WebServer/Routes/: invite.ts
src/WebServer/Routes/api/: index.ts  invite.ts
src/WebServer/Utils/: InsomniaExporter.ts  Response.ts  index.ts
